# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  readme-stars.yml
data/examples/: 22.txt
src/: lib.rs  main.rs  template.txt
src/helpers/: grid.rs  math.rs  matrix.rs  mod.rs  strings.rs
src/template/: mod.rs  timings.rs
src/template/commands/: all.rs
